# bioinformatics_course

./: LICENSE  README.md  pyproject.toml
notebooks/week_1/: frequency_table.ipynb  pattern_count.ipynb  reverse_complement.ipynb
notebooks/week_2/: find_dnaa_box.ipynb  hamming_dist_mismatch.ipynb  minimum_skew_problem.ipynb  skew_reverse_forward_half_strand.ipynb
notebooks/week_3/: motif_enumeration.ipynb
